--- a/index.html
+++ b/index.html
@@ -20,7 +20,29 @@
     </header>
     <main>
         <section class="main-section">
-
+            <h1>Rock Paper Scissors</h1>
+            <p>How to play: Pick rock, paper or scissors and hit play. The computer will then pick an object and the winner will be determined as follows:</p>
+            <ul>
+                <li>Rock beats scissors.</li>
+                <li>Scissors beats paper.</li>
+                <li>Paper beats rock.</li>
+            </ul>
+            <p>If you and the computer pick the same object, it will count as a draw.</p>
+            <div class="column-div some-white-space">
+                <div>
+                    <input type="radio" name="object" value="rock">Rock
+                </div>
+                <div>
+                    <input type="radio" name="object" value="paper">Paper
+                </div>
+                <div>
+                    <input type="radio" name="object" value="scissors">Scissors
+                </div>    
+                <div id="buttons-div">
+                    <button id="submit">Submit</button>
+                    <button id="reset">Reset</button>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
