HTML for game displaying game results

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             </ul>
             <p>If you and the computer pick the same object, it will count as a draw.</p>
             <div class="column-div some-white-space">
+                <h1 class="hidden">Win!</h1>
+                <div>
+                    <span id="wins-span">Wins: 0</span> <span id="losses-span">Losses: 0</span>
+                </div>
                 <div>
                     <input type="radio" name="object" value="rock">Rock
                 </div>
