--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
     </header>
     <main>
+        <div id="bg-wrapper"><div id="bg"></div></div>
         <section class="main-section">
             <h1>Rock Paper Scissors</h1>
             <p>How to play: Pick rock, paper or scissors and click play. The computer will then pick an object and the winner will be determined as follows:</p>
