add more pizazz

--- a/index.html
+++ b/index.html
@@ -37,27 +37,33 @@
                 <div class="row-div">
                     <div class="column-div narrow-div some-white-space user-radio-buttons">
                         <h3>Your pick:</h3>
-                        <div>
-                            <input type="radio" name="object" value="rock" class="user-radio-button">Rock
-                        </div>
-                        <div>
-                            <input type="radio" name="object" value="paper" class="user-radio-button">Paper
-                        </div>
-                        <div>
-                            <input type="radio" name="object" value="scissors" class="user-radio-button">Scissors
-                        </div>
+                        <label class="object-label">
+                            <input type="radio" name="object" value="rock" class="user-radio-button">
+                            <img src="./assets/rock.png" class="object-img">
+                        </label>
+                        <label class="object-label">
+                            <input type="radio" name="object" value="paper" class="user-radio-button">
+                            <img src="./assets/paper.png" class="object-img">
+                        </label>
+                        <label class="object-label">
+                            <input type="radio" name="object" value="scissors" class="user-radio-button">
+                            <img src="./assets/scissors.png" class="object-img">
+                        </label>
                     </div>
                     <div class="column-div narrow-div some-white-space computer-radio-buttons">
                         <h3>Computers pick:</h3>
-                        <div>
-                            <input type="radio" name="comp-object" value="rock" disabled id="computer-rock">Rock
-                        </div>
-                        <div>
-                            <input type="radio" name="comp-object" value="paper" disabled id="computer-paper">Paper
-                        </div>
-                        <div>
-                            <input type="radio" name="comp-object" value="scissors" disabled id="computer-scissors">Scissors
-                        </div>
+                        <label class="object-label">
+                            <input type="radio" name="comp-object" value="rock" disabled id="computer-rock">
+                            <img src="./assets/robo-rock.png" class="object-img">
+                        </label>
+                        <label class="object-label">
+                            <input type="radio" name="comp-object" value="paper" disabled id="computer-paper">
+                            <img src="./assets/robo-paper.png" class="object-img">
+                        </label>
+                        <label class="object-label">
+                            <input type="radio" name="comp-object" value="scissors" disabled id="computer-scissors">
+                            <img src="./assets/robo-scissors.png" class="object-img">
+                        </label>
                     </div>
                 </div>
                 <div id="buttons-div"> 
